style:header section are complete

--- a/src/input.css
+++ b/src/input.css
@@ -6,3 +6,9 @@
   --color-primary-text: #4f5665;
   --color-heading-text: #0b132a;
 }
+
+@layer {
+  .section-container {
+    @apply mx-w-[1440px] container mx-auto px-4 py-16;
+  }
+}
