--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,6 @@
 
 @layer {
   .section-container {
-    @apply mx-w-[1440px] container mx-auto px-4 py-12;
+    @apply max-w-[1440px] container mx-auto px-4 py-12;
   }
 }
